fix: align text in news page

--- a/client/src/scss/pages/news.scss
+++ b/client/src/scss/pages/news.scss
@@ -9,6 +9,7 @@ body {
 }
 
 #news-page {
+    display: table;
     background: #16161680;
     width: 95%;
     max-width: 1000px;
